# lineageVI

./: .gitignore  .readthedocs.yaml  README.md  dataloader.ipynb  developer.ipynb  developer_notebook.ipynb  downstream_notebook.ipynb  model.py  modules.py  preprocessing.ipynb  preprocessing.py  preprocessing_notebook.ipynb  pyproject.toml  trainer.py  training.ipynb  training.py  training_notebook.ipynb  training_pancreas_200.ipynb  utils.py
configs/: ppo_latent.yaml
docs/: .readthedocs.yaml  Makefile  README.md  SPHINX_SETUP_COMPLETE.md  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
gene_sets/: GO_Biological_Process_2025.gmt  GO_Molecular_Function_2025.gmt  Mm_development_or_pancreas_msigdb.gmt
notebooks/: 1-preprocessing_notebook.ipynb  2-training_notebook.ipynb  3-velocity_umaps_notebook.ipynb  4-map_velocity_notebook.ipynb  4-uncertainty_notebook.ipynb  5-plotting_notebook.ipynb  6-perturbation_notebook.ipynb  7-map_velocity_notebook.ipynb  Tutorial.ipynb  Tutorial_Pancreas_Clean_V2.ipynb  Tutorial_gastrulation.ipynb  Tutorial_pancreas_new.ipynb  downstream_notebook.ipynb  get_velocity_function.ipynb  perturbation_notebook.ipynb  perturbation_notebook_v2.ipynb  perturbation_notebook_v3.ipynb  plotting_notebooks.ipynb  preprocessing_notebook.ipynb  test.ipynb  training_notebook.ipynb  velocity_umaps_notebook.ipynb  yaml_run.ipynb
scripts/: run_baseline_viz.sh  run_downstream.py  run_lineagevi_training.sh  run_preprocessing.py  run_regime1.py  run_regime2.py  run_rl_training.sh  run_rl_viz.sh
tests/: README.md  __init__.py
(+55 files in other folders)
